актуализировал конфиг без обвязки дополнительными переменными. Без этого современная версия сервиса просто перезатирает конфиг своим, со значениями по-умолчанию

--- a/templates/settings.json.j2
+++ b/templates/settings.json.j2
@@ -7,22 +7,18 @@
     "alt-speed-time-enabled": {{ transmission_alt_speed_time_enabled | lower }},
     "alt-speed-time-end": {{ transmission_alt_speed_time_end }},
     "alt-speed-up": {{ transmission_alt_speed_up }},
-    "bind-address-ipv4": "{{ transmission_bind_address_ipv4 }}",
-    "bind-address-ipv6": "{{ transmission_bind_address_ipv6 }}",
     "announce-ip": {{ transmission_announce_ip }},
     "announce-ip-enabled": {{ transmission_announce_ip_enabled }},
     "anti-brute-force-enabled": {{ transmission_anti_brute_force_enabled }},
     "anti-brute-force-threshold": {{ transmission_anti_brute_force_threshold }},
-    "blocklist-date": {{ transmission_blocklist_date }},
+    "bind-address-ipv4": "{{ transmission_bind_address_ipv4 }}",
+    "bind-address-ipv6": "{{ transmission_bind_address_ipv6 }}",
     "blocklist-enabled": {{ transmission_blocklist_enabled | lower }},
     "blocklist-url": "{{ transmission_blocklist_url }}",
-    "blocklist-updates-enabled": {{ transmission_blocklist_updates_enabled }},
     "cache-size-mb": {{ transmission_cache_size_mb }},
     "default-trackers": "{{ transmission_default_trackers }}",
     "dht-enabled": {{ transmission_dht_enabled | lower }},
     "download-dir": "{{ transmission_download_dir }}",
-    "download-limit": {{ transmission_download_limit }},
-    "download-limit-enabled": {{ transmission_download_limit_enabled | lower }},
     "download-queue-enabled": {{ transmission_download_queue_enabled | lower }},
     "download-queue-size": {{ transmission_download_queue_size }},
     "encryption": {{ transmission_encryption }},
@@ -31,10 +27,8 @@
     "incomplete-dir": "{{ transmission_incomplete_dir }}",
     "incomplete-dir-enabled": {{ transmission_incomplete_dir_enabled | lower }},
     "lpd-enabled": {{ transmission_lpd_enabled | lower }},
-    "max-peers-global": {{ transmission_max_peers_global }},
     "message-level": {{ transmission_message_level }},
     "peer-congestion-algorithm": "{{ transmission_peer_congestion_algorithm }}",
-    "peer-id-ttl-hours": {{ transmission_peer_id_ttl_hours }},
     "peer-limit-global": {{ transmission_peer_limit_global }},
     "peer-limit-per-torrent": {{ transmission_peer_limit_per_torrent }},
     "peer-port": {{ transmission_peer_port }},
@@ -43,14 +37,17 @@
     "peer-port-random-on-start": {{ transmission_peer_port_random_on_start | lower }},
     "peer-socket-tos": "{{ transmission_peer_socket_tos }}",
     "pex-enabled": {{ transmission_pex_enabled | lower }},
+    "pidfile": "",
     "port-forwarding-enabled": {{ transmission_port_forwarding_enabled | lower }},
     "preallocation": {{ transmission_preallocation }},
-    "prefetch-enabled": {{ transmission_prefetch_enabled | lower }},
+    "preferred_transport": "utp",
+    "proxy_url": "",
     "queue-stalled-enabled": {{ transmission_queue_stalled_enabled | lower }},
     "queue-stalled-minutes": {{ transmission_queue_stalled_minutes }},
     "ratio-limit": {{ transmission_ratio_limit }},
     "ratio-limit-enabled": {{ transmission_ratio_limit_enabled | lower }},
     "rename-partial-files": {{ transmission_rename_partial_files | lower }},
+    "reqq": 2000,
     "rpc-authentication-required": {{ transmission_rpc_authentication_required | lower }},
     "rpc-bind-address": "{{ transmission_rpc_bind_address }}",
     "rpc-enabled": {{ transmission_rpc_enabled | lower }},
@@ -58,11 +55,11 @@
     "rpc-host-whitelist-enabled": {{ transmission_rpc_host_whitelist_enabled | lower }},
     "rpc-password": "{{ transmission_rpc_password }}",
     "rpc-port": {{ transmission_rpc_port }},
+    "rpc-socket-mode": "{{ transmission_rpc_socket_mode }}",
     "rpc-url": "{{ transmission_rpc_url }}",
     "rpc-username": "{{ transmission_rpc_username }}",
     "rpc-whitelist": "{{ transmission_rpc_whitelist }}",
     "rpc-whitelist-enabled": {{ transmission_rpc_whitelist_enabled | lower }},
-    "rpc-socket-mode": "{{ transmission_rpc_socket_mode }}",
     "scrape-paused-torrents-enabled": {{ transmission_scrape_paused_torrents_enabled | lower }},
     "script-torrent-added-enabled": {{ transmission_script_torrent_added_enabled }},
     "script-torrent-added-filename": "{{ transmission_script_torrent_added_filename }}",
@@ -72,18 +69,21 @@
     "script-torrent-done-seeding-filename": "{{ transmission_script_torrent_done_seeding_filename }}",
     "seed-queue-enabled": {{ transmission_seed_queue_enabled | lower }},
     "seed-queue-size": {{ transmission_seed_queue_size }},
+    "sequential_download": false,
+    "sleep-per-seconds-during-verify": 100,
     "speed-limit-down": {{ transmission_speed_limit_down }},
     "speed-limit-down-enabled": {{ transmission_speed_limit_down_enabled | lower }},
     "speed-limit-up": {{ transmission_speed_limit_up }},
     "speed-limit-up-enabled": {{ transmission_speed_limit_up_enabled | lower }},
     "start-added-torrents": {{ transmission_start_added_torrents | lower }},
-    "trash-can-enabled": {{ transmission_trash_can_enabled }},
+    "start_paused": false,
+    "tcp-enabled": true,
+    "torrent-added-verify-mode": "fast",
     "trash-original-torrent-files": {{ transmission_trash_original_torrent_files | lower }},
     "umask": {{ transmission_umask }},
+    "upload-slots-per-torrent": {{ transmission_upload_slots_per_torrent }},
     "utp-enabled": {{ transmission_utp_enabled | lower }}
     "watch-dir": {{ transmission_watch_dir }},
     "watch-dir-enabled": {{ transmission_watch_dir_enabled }}
-    "upload-limit": {{ transmission_upload_limit }},
-    "upload-limit-enabled": {{ transmission_upload_limit_enabled | lower }},
-    "upload-slots-per-torrent": {{ transmission_upload_slots_per_torrent }},
+    "watch-dir-force-generic": false
 }
